# paper-reading-workflow

./: .gitignore  README.md  requirements.txt  setup_windows.ps1
02-paper_summary_specs/: README.md  compare.md  default.md  template.md
03-tools/paper_workflow/: README.md  package_summary.ps1  package_summary.py  repair_packaged_summary_images.py
03-tools/pdf_tools/: README.md  extract_pdf.ps1  extract_pdf.py  pyproject.toml
05-zotero_obsidian_sync/: GUI_WORKFLOW.md  README.md  backfill_ai_tags.py  check_collection_status.cmd  cleanup_obsidian_duplicates.py  config.example.json  copy_next_prompt.cmd  copy_next_prompt.ps1  finalize_manual_summaries.cmd  finalize_manual_summaries.py  generate_dashboard.py  paper_sync_gui.cmd  paper_sync_gui.py  prepare_codex_prompts.py  refresh_dashboard.cmd  reorganize_obsidian_papers.py  report_collection_status.py  run_sync.cmd  run_sync.ps1  run_sync_gui.ps1  sync_collection_to_obsidian.cmd  sync_existing_packages.cmd  sync_existing_packages.py  sync_pipeline.py
docs/examples/: config.deepseek.example.json  multi-paper-comparison-demo.md  single-paper-summary-demo.md
