[project]
name = "pdf-tools"
version = "0.1.0"
description = "Local PDF parsing helpers for article summarization."
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.26.0",
    "pymupdf4llm>=0.0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
